refactor: curate Picnic Refaster suggestions